docs: update and unify project documentation
1. 移除Electron桌面端相关内容，统一为仅支持JavaFX桌面和Web运行
2. 重构中文文档和英文README，对齐内容结构
3. 简化项目结构说明和运行步骤
4. 更新作者信息和启动脚本